# pride-badge-v1

./: .gitattributes  .gitignore  BatteryGauge.sch  LiPo Battery Gauge OpAmp Calcs.xlsx  MCU_LED-Driver.sch  Pride Badge-cache.lib  Pride Badge-rescue.lib  Pride Badge.kicad_pcb  Pride Badge.sch  Pride Badge.xml  Pride Badge_prototype.kicad_pcb  README.md  badge physical layout.dxf  board_edge_cuts.kicad_mod  board_outline.kicad_mod  board_outline_100x73.kicad_mod  board_outline_80x59.kicad_mod  gerbv.gvp  notes.md  power.sch  sym-lib-table
gerbers/: Pride Badge-Edge.Cuts.gbr  Pride Badge-F.Cu.gbr  Pride Badge.drl
gerbers_production/: Pride Badge-B.Cu.gbl  Pride Badge-B.Mask.gbs  Pride Badge-B.Paste.gbp  Pride Badge-B.SilkS.gbo  Pride Badge-Edge.Cuts.gm1  Pride Badge-F.Cu.gtl  Pride Badge-F.Mask.gts  Pride Badge-F.Paste.gtp  Pride Badge-F.SilkS.gto  Pride Badge-NPTH-drl.gbr  Pride Badge-PTH-drl.gbr  Pride Badge.drl
software/pride-badge/: Cargo.toml
software/pride-badge/src/: main.rs
